--- a/projects.html
+++ b/projects.html
@@ -22,22 +22,24 @@
   </header>
 
   <div class="container">
-	  <h2 class="section-title">CSV Extractor</h2>
-	  <p>This is a very simple program that I made for my dad. I realized that several times every year he would spend several hours searching through a CSV file and copying all the emails of people he wanted to send holiday cards or open house invites to. I thought for a minute and then said, "I can make a Python program to do that for you." And so I did. It searches the file and if "Holiday Card" or "Open House" is found in the row, it adds their email to a text document. This program runs in about 30 seconds and from there my dad can just copy the emails and send the email. Instead of taking several hours, it takes a few minutes now. View the full source code on GitHub at this <a href="https://github.com/HateAndLoveModding/CSV_Extractor">link</a>.</p>
-  </div>
-  <div class="container">
     <h2 class="section-title" id="projects">Projects</h2>
     <div class="projects">
+      <a href="qwixx.html">
+        <div class="project">
+          <h3>Qwixx in Python</h3>
+          <p>An interactive scoresheet for the dice game Qwixx that uses Tkinter.</p>
+        </div>
+      </a>
       <a href="RCS.html">
         <div class="project">
           <h3>Rubik's Cube Solver</h3>
           <p>A program that randomly scrambles a 3x3 Rubik's Cube and solves it using the beginner method. It displays the state of the cube using SFML.</p>
         </div>
       </a>
-      <a href="qwixx.html">
+      <a href="CSV.html">
         <div class="project">
-          <h3>Qwixx in Python</h3>
-          <p>An interactive scoresheet for the dice game Qwixx that uses Tkinter.</p>
+          <h3>CSV Extractor</h3>
+          <p>A simple Python program that I made for my dad that extracts people's emails if "Holiday Card" is found in their row.</p>
         </div>
       </a>
     </div>
