--- a/index.html
+++ b/index.html
@@ -2,162 +2,37 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ryker Phelps | Portfolio</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      background: #f9f9f9;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    header {
-      background: #222;
-      color: #fff;
-      padding: 2rem 0;
-      text-align: center;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-    }
-
-    nav {
-      background: #444;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 1rem 0;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #00d1b2;
-    }
-
-    .container {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    .section-title {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #333;
-      border-bottom: 2px solid #00d1b2;
-      display: inline-block;
-      padding-bottom: 0.3rem;
-    }
-
-    .projects, .contact {
-      margin-bottom: 3rem;
-    }
-
-    .project {
-      background: #fff;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      margin-bottom: 1.5rem;
-    }
-
-    .project h3 {
-      margin-bottom: 0.5rem;
-      color: #00a896;
-    }
-
-    .project a {
-      text-decoration: none;
-      color: #0077cc;
-    }
-
-    .project a:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      background: #222;
-      color: #aaa;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
-   
-	.about {
-	  display: flex;
-	  flex-direction: column;
-	  margin-bottom: 3rem;
-	}
-
-	.section-title {
-	  font-size: 2rem;
-	  margin-bottom: 1rem;
-	  align-self: flex-start;
-	}
-
-	.profile-pic {
-	  width: 200px;
-	  height: auto;
-	  border-radius: 10px;
-	}
-
-  </style>
+  <link rel="stylesheet" href="CSS.css">
 </head>
 <body>
   <header>
-    <h1>Ryker Phelps</h1>
-    <p>Software Developer | Student | Creator</p>
+    <div class="name">
+      <h1>Ryker Phelps</h1>
+    </div>
+    <div>
+      <p>Software Developer</p>
+      <p>Student</p>
+      <p>Creator</p>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
   <div class="container">
-	<section id="about" class="about">
-	  <h2 class="section-title">About Me</h2>
-	  <picture>
-	  	<img src="profile_pic.JPG" class="profile-pic">
-	  </picture>
-	  <p>
-		Hello! I'm Ryker, a passionate software developer and computer science student.
-		I love building smart, useful tools and exploring the intersections of technology, creativity, and user experience.
-	  </p>
-	</section>
-    <section id="projects" class="projects">
-      <h2 class="section-title">Projects</h2>
-      <div class="project">
-        <h3><a href="qwixx.html">Qwixx in Python</a></h3>
-        <p>An interactive scoresheet for the dice game Qwixx that uses Tkinter.</p>
-      </div>
-      <div class="project">
-        <h3><a href="RCS.html">Rubik's Cube Solver</a></h3>
-        <p>A program that randomly scrambles a 3x3 Rubik's Cube and solves it using the beginner method. It displays the state of the cube using SFML.</p>
-      </div>
-      <div class="project">
-        <h3><a href="CSV.html">CSV Extractor</a></h3>
-        <p>A simple Python program that I made for my dad that extracts people's emails if "Holiday Card" is found in their row.</p>
-      </div>
-    </section>
-
-    <section id="contact" class="contact">
-      <h2 class="section-title">Contact</h2>
-      <p>Feel free to reach out via email at <a href="mailto:rykerjphelps@gmail.com">rykerjphelps@gmail.com</a> or connect on <a href="https://github.com/HateAndLoveModding" target="_blank">GitHub</a>.</p>
-    </section>
+    <h2 class="section-title" id="about">About Me</h2>
+    <div class="hero-section">
+      <img src="profile_pic.JPG">
+      <h1>Super Epic Bio!</h1>
+      <p>Hello! I'm Ryker, a passionate software developer and computer science student. I love building smart, useful automations on my iPhone using Shortcuts or using Python on my laptop. I love to learn new things and I am passionate about writing secure code by avoiding common security mistakes. I love exploring the capabilities of AI specifically when it comes to AI generated music.</p>
+      <a href="about.html">Read More</a> 
+    </div>
+  </div>
+  <div class="container">
+    <h2 class="section-title" id="contact">Contact</h2>
+    <p style="font-size: max(1rem, 2dvw);">Feel free to reach out via email at <a href="mailto:rykerjphelps@gmail.com">rykerjphelps@gmail.com</a> or connect on <a href="https://github.com/HateAndLoveModding" target="_blank">GitHub</a>.</p>
   </div>
 
   <footer>
