--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="projects.html">Projects</a>
+      <a href="solves.html">Rubik's Cube Solve Data</a>
     </nav>
   </header>
 
