--- a/solves.html
+++ b/solves.html
@@ -55,7 +55,7 @@
 </table>
 
 <script>
-fetch("solves.json")
+fetch("https://hateandlovemodding.github.io/solves.json")
   .then(response => response.json())
   .then(data => {
     const tableBody = document.querySelector("#solveTable tbody");
